# recsys-playground

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  frontend.py  pyproject.toml
notebooks/: baseline.ipynb  eda.ipynb  explicit_baseline.ipynb  feature_engineering.ipynb
src/: utils.py
src/dataloading/: dataset.py  metrics.py
