[tool.poetry]
name = "recsys-playground"
version = "0.1.0"
description = ""
authors = ["Rodion Proskuryakov <rproskuryakov.job@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "recsys_playground"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.25.2"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
