[tool.poetry]
name = "recsys-playground"
version = "0.1.0"
description = ""
authors = ["rproskuryakov <noisyrave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.experiments.dependencies]
numpy = "^2.2.1"
scipy = "^1.14.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
lightfm = "^1.17"
scikit-learn = "^1.6.0"
lightgbm = "^4.5.0"
faiss-cpu = "^1.9.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
